menu and responsive

--- a/index.html
+++ b/index.html
@@ -17,23 +17,31 @@
         <a href="/"><i class="bx bx-book-reader"></i>Ernstudy</a>
       </div>
 
-      <nav class="nav show-menu">
+      <div class="menu">
+        <i class="bx bx-menu"></i>
+      </div>
+
+      <nav class="nav">
         <ul class="ul">
-          <li><a href="#" class="nav-a active">Home</a></li>
           <li>
-            <a href="#" class="nav-a active">Resources </a>
+            <a href="#" class="active">Home</a>
           </li>
-          <li class="dropdown">
-            <a class="nav-a active">About Me</a>
+
+          <li>
+            <a href="#">Resources </a>
+          </li>
+
+          <li>
+            <a href="#">About Me</a>
+          </li>
+
+          <li>
+            <a href="#">Portfolio</a>
           </li>
           <!-- <li><a href="#" class="nav-a active">Contact</a></li>
           <li><a href="#" class="nav-a active">Blog</a></li> -->
         </ul>
       </nav>
-
-      <div class="menu">
-        <i class="bx bx-menu"></i>
-      </div>
     </header>
     <main>
       <div class="container-cover">
@@ -157,8 +165,8 @@
         </div>
       </section>
 
-      <section class="profile-card">
-        <div class="container-card">
+      <section class="profile-container">
+        <div class="profile-card">
           <div class="header-card">
             <div class="img"></div>
           </div>
