Last projects section

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
 
         <!-- FREE  RESOURCES -->
-        <div class="free-resources">
+        <!-- <div class="free-resources">
           <h4><i class="bx bxs-download"></i>Downloard for free</h4>
           <div class="boxes">
             <div class="box">
@@ -162,26 +162,7 @@
               </a>
             </div>
           </div>
-        </div>
-      </section>
-
-      <section class="profile-container">
-        <div class="profile-card">
-          <div class="header-card">
-            <div class="img"></div>
-          </div>
-          <div class="body-card">
-            <h2>Ernst St-Gilles</h2>
-            <h3>Web developer</h3>
-            <p>I build professional and accessible websites</p>
-            <a href="#" class="btn">About Me</a>
-            <div class="socials">
-              <a href="#" class="bx bxl-linkedin"></a>
-              <a href="#" class="bx bxl-github"></a>
-              <a href="#" class="bx bxl-facebook"></a>
-            </div>
-          </div>
-        </div>
+        </div> -->
       </section>
 
       <!-- ABOUT -->
@@ -376,6 +357,159 @@
               />
               <h3>Frases para aprender ingles</h3>
             </a>
+          </div>
+        </div>
+      </section> -->
+
+      <!-- ---------------PROJECTS----------------- -->
+
+      <section class="projects" id="projects">
+        <div class="heading">
+          <i class="bx bx-code-alt"></i>
+          <h3>Last Projects</h3>
+        </div>
+
+        <!-- MATH FOR KIDS  -->
+        <div class="tiles">
+          <div class="tile tile-1">
+            <div class="tile-img">
+              <img src="images/math4kids.png" alt="" />
+            </div>
+            <div class="tile-info">
+              <h2>Math for kids</h2>
+              <div class="tech">
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#JS</span>
+              </div>
+
+              <div class="tile-links">
+                <a
+                  href="https://github.com/ernstudy/math4kids.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  View Code
+                  <i class="bx bxl-github"></i>
+                </a>
+                <a href="https://ernstudy.com/math4kids/index.html"
+                  >View Project<i class="bx bx-link-external"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <!-- ANIMATED TEMPLATE -->
+          <div class="tile">
+            <div class="tile-img">
+              <img src="images/animated.png" alt="" />
+            </div>
+            <div class="tile-info">
+              <h2>Animated Template project</h2>
+
+              <div class="tech">
+                <span>#HTML</span>
+                <span>#tailwind CSS</span>
+                <span>#JS</span>
+              </div>
+
+              <div class="tile-links">
+                <a
+                  href="https://github.com/ernstudy/animated-template-project.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  View Code
+                  <i class="bx bxl-github"></i>
+                </a>
+                <a href="/animated-template-project"
+                  >View Project<i class="bx bx-link-external"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <!-- PHOTOGRAPHER -->
+          <div class="tile tile-1">
+            <div class="tile-img">
+              <img src="images/photographer.png" alt="" />
+            </div>
+            <div class="tile-info">
+              <h2>Ken zee - photographer</h2>
+
+              <div class="tech">
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#JS</span>
+              </div>
+
+              <div class="tile-links">
+                <a
+                  href="https://github.com/ernstudy/ken-zee-photographers.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  View Code
+                  <i class="bx bxl-github"></i>
+                </a>
+                <a href="/ken-zee-photographer/"
+                  >View Project<i class="bx bx-link-external"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="tile tile-1">
+            <div class="tile-img">
+              <img src="images/mihambugers.png" alt="" />
+            </div>
+            <div class="tile-info">
+              <h2>At Burger Delights project</h2>
+
+              <div class="tech">
+                <span>#HTML</span>
+                <span>#CSS</span>
+                <span>#JS</span>
+              </div>
+
+              <div class="tile-links">
+                <a
+                  href="https://github.com/ernstudy/At-Burger-Delights.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  View Code
+                  <i class="bx bxl-github"></i>
+                </a>
+                <a href="/At-Burger-Delights-project"
+                  >View Project<i class="bx bx-link-external"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="all-projects">
+          <a href="/portfolio"
+            >All Projects<i class="bx bxs-chevron-right-circle"></i
+          ></a>
+        </div>
+      </section>
+
+      <!-- ===========PREFILE CARD ============  -->
+      <!-- <section class="profile-container">
+        <div class="profile-card">
+          <div class="header-card">
+            <div class="img"></div>
+          </div>
+          <div class="body-card">
+            <h2>Ernst St-Gilles</h2>
+            <h3>Web developer</h3>
+            <p>I build professional and accessible websites</p>
+            <a href="#" class="btn">About Me</a>
+            <div class="socials">
+              <a href="#" class="bx bxl-linkedin"></a>
+              <a href="#" class="bx bxl-github"></a>
+              <a href="#" class="bx bxl-facebook"></a>
+            </div>
           </div>
         </div>
       </section> -->
