Portfolio & about pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Ernstudy</title>
   </head>
@@ -24,7 +23,7 @@
       <nav class="nav">
         <ul class="ul">
           <li>
-            <a href="#" class="active">Home</a>
+            <a href="/">Home</a>
           </li>
 
           <li>
@@ -32,11 +31,14 @@
           </li>
 
           <li>
-            <a href="#">About Me</a>
+            <a href="/about-me/">About Me</a>
           </li>
 
           <li>
-            <a href="#">Portfolio</a>
+            <a href="/portfolio/">Portfolio</a>
+          </li>
+          <li>
+            <a href="/contact/" class="active">Contact</a>
           </li>
           <!-- <li><a href="#" class="nav-a active">Contact</a></li>
           <li><a href="#" class="nav-a active">Blog</a></li> -->
@@ -377,11 +379,6 @@
             </div>
             <div class="tile-info">
               <h2>Math for kids</h2>
-              <div class="tech">
-                <span>#HTML</span>
-                <span>#CSS</span>
-                <span>#JS</span>
-              </div>
 
               <div class="tile-links">
                 <a
@@ -407,12 +404,6 @@
             <div class="tile-info">
               <h2>Animated Template project</h2>
 
-              <div class="tech">
-                <span>#HTML</span>
-                <span>#tailwind CSS</span>
-                <span>#JS</span>
-              </div>
-
               <div class="tile-links">
                 <a
                   href="https://github.com/ernstudy/animated-template-project.git"
@@ -437,12 +428,6 @@
             <div class="tile-info">
               <h2>Ken zee - photographer</h2>
 
-              <div class="tech">
-                <span>#HTML</span>
-                <span>#CSS</span>
-                <span>#JS</span>
-              </div>
-
               <div class="tile-links">
                 <a
                   href="https://github.com/ernstudy/ken-zee-photographers.git"
@@ -464,12 +449,6 @@
             </div>
             <div class="tile-info">
               <h2>At Burger Delights project</h2>
-
-              <div class="tech">
-                <span>#HTML</span>
-                <span>#CSS</span>
-                <span>#JS</span>
-              </div>
 
               <div class="tile-links">
                 <a
