--- a/about-me/index.html
+++ b/about-me/index.html
@@ -6,7 +6,10 @@
 
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="./css/styles.css" />
-
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>Ernstudy | Ernst Sanit-Gilles</title>
   </head>
 
