--- a/contact/index.html
+++ b/contact/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="/styles/style.css" />
     <link rel="stylesheet" href="style/contact.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- ---------------HEADER----------------- -->
