--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="nav">
         <ul class="ul">
           <li>
-            <a href="/">Home</a>
+            <a href="/" class="active">Home</a>
           </li>
 
           <li>
@@ -38,7 +38,7 @@
             <a href="/portfolio/">Portfolio</a>
           </li>
           <li>
-            <a href="/contact/" class="active">Contact</a>
+            <a href="/contact/">Contact</a>
           </li>
           <!-- <li><a href="#" class="nav-a active">Contact</a></li>
           <li><a href="#" class="nav-a active">Blog</a></li> -->
