--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,10 +42,10 @@
           </li>
 
           <li>
-            <a href="/portfolio/">Portfolio</a>
+            <a href="/portfolio/" class="active">Portfolio</a>
           </li>
           <li>
-            <a href="/contact/" class="active">Contact</a>
+            <a href="/contact/">Contact</a>
           </li>
           <!-- <li><a href="#" class="nav-a active">Contact</a></li>
           <li><a href="#" class="nav-a active">Blog</a></li> -->
