--- a/about-me/index.html
+++ b/about-me/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="/styles/style.css" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/about.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -68,7 +68,7 @@
         </div>
 
         <div class="btn">
-          <a href="/portoflio/" class="portfolio">Portfoflio</a>
+          <a href="/portfolio/" class="portfolio">Portfoflio</a>
           <a href="/contact" class="contact">Contac Me</a>
         </div>
 
@@ -97,11 +97,9 @@
 
       <!-- ---------------TECHNOLOGY----------------- -->
 
-      <section id="technology" class="technology">
-        <div class="heading">
-          <i class="bx bx-book-reader"></i>
-          <h3>Tecnologies</h3>
-        </div>
+      <section class="technologies">
+        <h3><i class="bx bx-book-reader"></i>Technologies</h3>
+
         <div class="skills-container">
           <div class="skills">
             <i class="bx bxl-html5"></i>
