--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                   View Code
                   <i class="bx bxl-github"></i>
                 </a>
-                <a href="https://ernstudy.com/math4kids/index.html"
+                <a href="portfolio/math4kids/"
                   >View Project<i class="bx bx-link-external"></i
                 ></a>
               </div>
@@ -413,7 +413,7 @@
                   View Code
                   <i class="bx bxl-github"></i>
                 </a>
-                <a href="/animated-template-project"
+                <a href="portfolio/animated-template-project"
                   >View Project<i class="bx bx-link-external"></i
                 ></a>
               </div>
@@ -437,7 +437,7 @@
                   View Code
                   <i class="bx bxl-github"></i>
                 </a>
-                <a href="/ken-zee-photographer/"
+                <a href="portfolio/ken-zee-photographer/"
                   >View Project<i class="bx bx-link-external"></i
                 ></a>
               </div>
@@ -459,7 +459,7 @@
                   View Code
                   <i class="bx bxl-github"></i>
                 </a>
-                <a href="/At-Burger-Delights-project"
+                <a href="portfolio/At-Burger-Delights-project"
                   >View Project<i class="bx bx-link-external"></i
                 ></a>
               </div>
