--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -84,7 +84,7 @@
                 View Code
                 <i class="bx bxl-github"></i>
               </a>
-              <a href="https://ernstudy.com/math4kids/divide.html"
+              <a href="/math4kids"
                 >View Project<i class="bx bx-link-external"></i
               ></a>
             </div>
@@ -159,44 +159,12 @@
 
         <div class="tile tile-1">
           <div class="tile-img">
-            <img src="img/photographer.png" alt="" />
-          </div>
-          <div class="tile-info">
-            <h2>Ken zee - photographer</h2>
-            <p>
-              I have created this photography website using HTML, CSS, and
-              JavaScript. This website consists of three sections: Home, About
-              Me, and a contact form.
-            </p>
-            <div class="tech">
-              <span>#HTML</span>
-              <span>#CSS</span>
-              <span>#JS</span>
-            </div>
-
-            <div class="tile-links">
-              <a
-                href="https://github.com/ernstudy/ken-zee-photographers.git"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                View Code
-                <i class="bx bxl-github"></i>
-              </a>
-              <a href="/ken-zee-photographer/"
-                >View Project<i class="bx bx-link-external"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <div class="tile tile-1">
-          <div class="tile-img">
             <img src="img/mihambugers.png" alt="" />
           </div>
           <div class="tile-info">
             <h2>At Burger Delights project</h2>
             <p>
-              I developed this hamburger webpage for my web portfolio by
+              I developed this hamburger webpage for my web fortfolio by
               following a tutorial on YouTube.
             </p>
 
