portfolio links updated

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                   View Code
                   <i class="bx bxl-github"></i>
                 </a>
-                <a href="portfolio/animated-template-project"
+                <a href="https://ernstudy.github.io/animated-template-project"
                   >View Project<i class="bx bx-link-external"></i
                 ></a>
               </div>
