--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -84,7 +84,7 @@
                 View Code
                 <i class="bx bxl-github"></i>
               </a>
-              <a href="/math4kids"
+              <a href="/portfolio/math4kids"
                 >View Project<i class="bx bx-link-external"></i
               ></a>
             </div>
@@ -116,7 +116,7 @@
                 View Code
                 <i class="bx bxl-github"></i>
               </a>
-              <a href="/animated-template-project"
+              <a href="https://ernstudy.github.io/animated-template-project/"
                 >View Project<i class="bx bx-link-external"></i
               ></a>
             </div>
@@ -150,7 +150,7 @@
                 View Code
                 <i class="bx bxl-github"></i>
               </a>
-              <a href="/ken-zee-photographer/"
+              <a href="/portfolio/ken-zee-photographer/"
                 >View Project<i class="bx bx-link-external"></i
               ></a>
             </div>
@@ -183,7 +183,7 @@
                 View Code
                 <i class="bx bxl-github"></i>
               </a>
-              <a href="/At-Burger-Delights-project"
+              <a href="/portfolio/At-Burger-Delights-project"
                 >View Project<i class="bx bx-link-external"></i
               ></a>
             </div>
