--- a/index.html
+++ b/index.html
@@ -55,9 +55,18 @@
             creating and sharing while I learn
           </p>
           <div class="socials-home">
-            <a href="#" class="bx bxl-youtube"></a>
-            <a href="#" class="bx bxl-patreon"></a>
-            <a href="#" class="bx bxl-facebook"></a>
+            <a
+              href="https://www.youtube.com/@ernstudy_com"
+              class="bx bxl-youtube"
+            ></a>
+            <a
+              href="https://www.patreon.com/ernstschool"
+              class="bx bxl-patreon"
+            ></a>
+            <a
+              href="https://web.facebook.com/ernstschool"
+              class="bx bxl-facebook"
+            ></a>
           </div>
         </div>
       </div>
@@ -77,7 +86,7 @@
                   alt=""
                 />
               </div>
-              <h3>PDF & AUDIO</h3>
+              <h3>PDF & AUDIO <img src="./images/frances.png" alt="" /></h3>
               <a
                 href="https://www.patreon.com/ernstschool/shop/lista-de-frases-simples-en-frances-para-34663?source=storefront"
                 target="_blank"
@@ -98,9 +107,30 @@
                   alt=""
                 />
               </div>
-              <h3>PDF & AUDIO</h3>
+              <h3>PDF & AUDIO <img src="./images/english.png" alt="" /></h3>
               <a
                 href="https://www.patreon.com/ernstschool/shop/lista-de-frases-simples-en-ingles-y-no-1-31161?source=storefront"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                ><i class="bx bxs-cart-download"></i>Downloard Now</a
+              ></a
+            >
+          </div>
+          <div class="card">
+            <a
+              href="https://www.patreon.com/aprendemosespanol/shop/liste-des-phrases-super-utiles-en-no-1-2-29509?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=productshare_fan&utm_content=join_link"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><div class="img">
+                <img
+                  src="https://c10.patreonusercontent.com/4/patreon-media/p/campaign/10503657/f1f16fded268499786453cc623878979/eyJ3Ijo2MjB9/1.png?token-time=1720915200&token-hash=ejAIvveOdrcNbpf7VUWR8EUTIFdRqRSiMCgzDO7eWgQ%3D"
+                  alt=""
+                />
+              </div>
+              <h3>PDF & AUDIO <img src="./images/espagnol.png" alt="" /></h3>
+              <a
+                href="https://www.patreon.com/aprendemosespanol/shop/liste-des-phrases-super-utiles-en-no-1-2-29509?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=productshare_fan&utm_content=join_link"
                 target="_blank"
                 rel="noopener noreferrer"
                 class="btn"
