--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main>
       <div class="container-cover">
         <div class="info">
-          <h1>Ernstudy: Education, Web Development & more</h1>
+          <h1>Ernstudy: Education & Web Development</h1>
           <p>
             My name is Ernst, and Ernstudy is an educational space where I
             publish content along with web development projects that I am
