post for resources added

--- a/index.html
+++ b/index.html
@@ -77,35 +77,11 @@
         <div class="cards">
           <div class="card">
             <a
-              href="https://www.patreon.com/ernstschool/shop/lista-de-frases-simples-en-frances-para-34663?source=storefront"
-              target="_blank"
-              rel="noopener noreferrer"
-              ><div class="img">
-                <img
-                  src="https://c10.patreonusercontent.com/4/patreon-media/p/campaign/10143081/a2ffd35f18c0444f8a45e45b8506bff0/eyJ3Ijo2MjB9/1.png?token-time=1721088000&token-hash=bkYgtqEBCJW9wDng9110srdrmBv8wysu3gTxzgE1DmY%3D"
-                  alt=""
-                />
-              </div>
-              <h3>PDF & AUDIO <img src="./images/frances.png" alt="" /></h3>
-              <a
-                href="https://www.patreon.com/ernstschool/shop/lista-de-frases-simples-en-frances-para-34663?source=storefront"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="btn"
-                ><i class="bx bxs-cart-download"></i>Downloard Now</a
-              ></a
-            >
-          </div>
-          <div class="card">
-            <a
               href="https://www.patreon.com/ernstschool/shop/lista-de-frases-simples-en-ingles-y-no-1-31161?source=storefront"
               target="_blank"
               rel="noopener noreferrer"
               ><div class="img">
-                <img
-                  src="https://c10.patreonusercontent.com/4/patreon-media/p/campaign/10143081/f7822e4f073243aebf3d69d151d5c3fc/eyJ3Ijo2MjB9/1.png?token-time=1721088000&token-hash=ZgWVHPNpwaIrBaD1EWYKReG7QjRnbQdRBvh5_85uvRM%3D"
-                  alt=""
-                />
+                <img src="images/enlishpost.png" alt="" />
               </div>
               <h3>PDF & AUDIO <img src="./images/english.png" alt="" /></h3>
               <a
@@ -119,14 +95,29 @@
           </div>
           <div class="card">
             <a
+              href="https://www.patreon.com/ernstschool/shop/lista-de-frases-simples-en-frances-para-34663?source=storefront"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><div class="img">
+                <img src="images/francespost.png" alt="" />
+              </div>
+              <h3>PDF & AUDIO <img src="./images/frances.png" alt="" /></h3>
+              <a
+                href="https://www.patreon.com/ernstschool/shop/lista-de-frases-simples-en-frances-para-34663?source=storefront"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn"
+                ><i class="bx bxs-cart-download"></i>Downloard Now</a
+              ></a
+            >
+          </div>
+          <div class="card">
+            <a
               href="https://www.patreon.com/aprendemosespanol/shop/liste-des-phrases-super-utiles-en-no-1-2-29509?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=productshare_fan&utm_content=join_link"
               target="_blank"
               rel="noopener noreferrer"
               ><div class="img">
-                <img
-                  src="https://c10.patreonusercontent.com/4/patreon-media/p/campaign/10503657/f1f16fded268499786453cc623878979/eyJ3Ijo2MjB9/1.png?token-time=1720915200&token-hash=ejAIvveOdrcNbpf7VUWR8EUTIFdRqRSiMCgzDO7eWgQ%3D"
-                  alt=""
-                />
+                <img src="images/espanolpost.png" alt="" />
               </div>
               <h3>PDF & AUDIO <img src="./images/espagnol.png" alt="" /></h3>
               <a
